--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>Hello</h1>
+    <input type="text" placeholder="please input">
+    <input type="checkbox">
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <section>
+        <option value="">hello</option>
+        <option value="">hello4</option>
+        <option value="">hello3</option>
+        <option value="">hello2</option>
+        <option value="">hello1</option>
+    </section>
 </body>
 </html>
